--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "API pour l'application de blagues Carambar & Co",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    
+  "start": "node server.js",
+  "seed": "node seed.js"
+
   },
   "keywords": [
     "API",
