--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6",
     "swagger-jsdoc": "^6.2.8",
